Fix product section dynamic layout for product image as well as the text content to grow in size as viewport gets wider and image aspect ratio stays the same and is align in middle of container when shrunk.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --heading-font-size: calc(0.7rem + 1.5vw) ;
-    --sub-heading-font-size: calc(1.6rem + 2vw);
-    --p-font-size: calc(0.5rem + 2vw);
+    --heading-font-size: calc(0.7rem + 1vw) ;
+    --sub-heading-font-size: calc(1.6rem + 1vw);
+    --p-font-size: calc(0.5rem + 1vw);
 --dark-font-color: rgB(16	23	40);
 
 }
@@ -152,7 +152,7 @@ font-size: calc(0.5rem + 2vw);
     color: rgB(16	23	40);	
 
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
     
     
@@ -183,6 +183,7 @@ justify-content: center;
 text-align: right;
 padding: calc(4% + 3vw);
 margin: 5% 0 5% 0;
+
 
 }
 
@@ -215,7 +216,17 @@ color: var(--dark-font-color);
     flex-direction: column;
 align-items: flex-start;
     justify-content: flex-start;
+    margin-left: 5vw;
 }
+.section-3-content-container .heading {
+    font-size: var(--heading-font-size);
+}
+.section-3-content-container .sub-heading {
+    font-size: var(--sub-heading-font-size);
+}
+
+
+
 .section-3-content-container .paragraph {
 font-size: var(--p-font-size);
 }
@@ -245,50 +256,52 @@ border-radius: 30%;
         /* height: 800rem; */
 display: flex;
 flex-direction: column;
-justify-content: space-evenly;
+justify-content: center;
 align-items: center;
+row-gap: 100px;
 
     }
-    
+    .section-4-container .heading {
+        font-size: var(--sub-heading-font-size);
+    }
+
+
+
+
 .card-container {
-    /* border: 4px solid white; */
     position: relative;
     width: 80%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
-
-    
+    row-gap: 100px;
 }
 
 .card {
     width: 80%;
-    
-    /* border: 3px solid green; */
     display: flex;
     flex-direction: row;
-flex-wrap: wrap;
-    
+flex-wrap: nowrap;
+    /* column-gap: 50px; */
 }
 
 .card .img-container {
-    width: 33%;
-    height: 15rem;
-    /* background-color: white; */
+    width: 33vw;
+    height: 17vw;
 display: flex;
 justify-content: center;
 align-items: center;
-/* border: 2px solid yellow; */
 position: relative;
-top: 25%;
+align-self: center;
 }
 
-img {
+.card img {
 width: 100%;
 height: 100%;
 object-fit: cover;
+object-position: center;
 }
 
 .card-content-container {
@@ -297,18 +310,18 @@ object-fit: cover;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* border: 4px solid white; */
+    row-gap: 25px;
     flex: 0 1 400px;
 }
 
 .card-content-container h2 {
     
     font-weight: bold;
-    font-size: 2rem;
+    font-size: var(--p-font-size);
     text-align: center;
 }
 .card-content-container p {
-font-size: 1.5rem;
+font-size: var(--p-font-size);
 max-width: 45ch;
 text-align: center;
 padding: 5px 40px ;
